wcfsetup/install/files/style/ui/redactor.scss
/* ... */
.redactor-dropdown {
	> .dropdownMenu {
		display: block;
		visibility: visible;
		
		/* we cannot influence the actual dropdown position as set by Redactor,
		   forces a gap while keeping the inline top-attribute unaffected */
		transform: translateY(3px);
		
		> li:hover {
			background-color: transparent !important;
		}
		
		a:hover {
			background-color: $wcfDropdownBackgroundActive;
		}
	}
	
	.redactor-dropdown-link-inactive {
		cursor: default;
		opacity: .6;
		
		&:hover {
			background-color: transparent !important;
			color: $wcfDropdownText !important;
		}
	}
}

/* disable auto zoom in mobile safari */
@include screen-md-down {
	.redactor-editor {
		font-size: 16px;
		max-height: 500px;
	}
}

.redactor-toolbar {
	background-color: $wcfHeaderBackground;
	display: flex;
	flex-wrap: wrap;
	
	> li {
		flex: 0 0 auto;
		margin-bottom: 1px;
		
		> a {
			color: $wcfHeaderMenuLink;
			display: block;
			outline: none;
			padding: 10px;
			text-align: center;
			
			@include wcfFontSmall;
			
			&.redactor-button-disabled {
				background-color: transparent !important;
				color: $wcfButtonDisabledText !important;
				cursor: default;
			}
			
			&.redactor-act,
			&.dropact {
				background-color: $wcfHeaderMenuLinkBackgroundActive;
				color: $wcfHeaderMenuLinkActive;
			}
			
			.icon {
				color: inherit;
				cursor: inherit !important;
			}
			
			@include screen-lg {
				// hover-styles on mobile are misleading as they stay much longer
				// due to the click-like behavior
				&:hover {
					background-color: $wcfHeaderMenuLinkBackgroundActive;
					color: $wcfHeaderMenuLinkActive;
				}
			}
		}
		
		@include screen-sm-up {
			&.redactor-toolbar-separator {
				margin-left: 11px;
				position: relative;
				
				&::before {
					bottom: 7px;
					border-left: 1px solid $wcfHeaderMenuLink;
					content: "";
					left: -6px;
					opacity: .6;
					position: absolute;
					top: 7px;
				}
			}
		}
		
		@include screen-xs {
			&[data-show-on-mobile="false"] {
				display: none;
			}
		}
	}
}

.redactor-toolbar-tooltip {
	@extend .balloonTooltip;
	
	opacity: 1;
	visibility: visible;
	
	&:before {
		// TODO: border-color: $wcfTooltipBackgroundColor transparent;
		border-style: solid;
		border-width: 0 5px 5px;
		content: "";
		display: block;
		left: 50%;
		position: absolute;
		top: -5px;
		transform: translateX(-50%);
	}
}

#redactor-image-box {
	border: 1px dashed rgba(0, 0, 0, .5);
	display: inline-block;
	line-height: 0;
	max-width: 100%;
	position: relative;
	
	> img {
		border-width: 0;
		opacity: .5;
	}
}

#redactor-image-editter {
	@extend .balloonTooltip;
	
	cursor: pointer;
	left: 50%;
	// TODO: line-height: $wcfSmallFontSize;
	margin-top: -13px;
	opacity: 1;
	top: 50%;
	visibility: visible;
	z-index: 5;
}

#redactor-image-resizer {
	background-color: rgba(0, 0, 0, 1);
	border: 1px solid rgba(255, 255, 255, 1);
	bottom: -4px;
	cursor: nw-resize;
	height: 8px;
	line-height: 1;
	position: absolute;
	right: -5px;
	width: 8px;
	z-index: 10;
}

.redactorAttachmentContainer {
	background-color: rgba(255, 255, 255, 1);
	border: 1px solid rgba(238, 238, 238, 1);
	border-top-width: 0;
	padding: 7px 14px 7px;
}

.redactor-dropdown-box-fontcolor {
	width: 200px;
	
	> li.redactorColorPallet {
		padding: 0 4px;
		
		&:hover {
			background-color: $wcfDropdownBackground !important;
		}
		
		> a {
			border: 2px solid rgba(255, 255, 255, 1);
			border-bottom-width: 0;
			display: inline-block;
			font-size: 0; // TODO
			height: 20px;
			padding: 0;
			margin: 0;
			width: 20px;
		}
	}
}

.redactorDropArea {
	background-color: rgba(255, 255, 204, 1);
	border: 5px dashed rgba(255, 204, 0);
	box-sizing: border-box;
	font-size: 1.4rem; // TODO
	position: absolute;
	text-align: center;
	vertical-align: middle;
	z-index: 360;
	
	&.active {
		background-color: #CEF6CE;
		border-color: #04B404;
	}
}

.redactor-link-tooltip {
	background-color: $wcfTooltipBackground;
	border-radius: 2px;
	box-shadow: 0 0 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
	color: $wcfTooltipText;
	padding: 5px 10px 7px;
	position: absolute;
	z-index: 800;
	
	> a {
		color: $wcfTooltipText;
	}
}

.redactor-voice-label {
	display: none;
}

/* format */
.redactor-dropdown-h2 {
	@include wcfFontSection;
}

.redactor-dropdown-h3 {
	@include wcfFontHeadline;
}

.redactor-dropdown-h4 {
	// TODO: add styling
}

/* alignment plugin */
.text-center {
	text-align: center;
}

.text-right {
	text-align: right;
}

/* alignment plugin / custom value */
.text-justify {
	text-align: justify;
	
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	-ms-hyphens: auto;
	hyphens: auto;
}

/* text color */
.woltlab-color-000000 { color: #000000 !important; }
.woltlab-color-000080 { color: #000080 !important; }
.woltlab-color-0000CD { color: #0000CD !important; }
.woltlab-color-0000FF { color: #0000FF !important; }
.woltlab-color-006400 { color: #006400 !important; }
.woltlab-color-008000 { color: #008000 !important; }
.woltlab-color-008080 { color: #008080 !important; }
.woltlab-color-00FF00 { color: #00FF00 !important; }
.woltlab-color-00FFFF { color: #00FFFF !important; }
.woltlab-color-2F4F4F { color: #2F4F4F !important; }
.woltlab-color-40E0D0 { color: #40E0D0 !important; }
.woltlab-color-4B0082 { color: #4B0082 !important; }
.woltlab-color-696969 { color: #696969 !important; }
.woltlab-color-800000 { color: #800000 !important; }
.woltlab-color-800080 { color: #800080 !important; }
.woltlab-color-808080 { color: #808080 !important; }
.woltlab-color-8B4513 { color: #8B4513 !important; }
.woltlab-color-A52A2A { color: #A52A2A !important; }
.woltlab-color-A9A9A9 { color: #A9A9A9 !important; }
.woltlab-color-ADD8E6 { color: #ADD8E6 !important; }
.woltlab-color-AFEEEE { color: #AFEEEE !important; }
.woltlab-color-B22222 { color: #B22222 !important; }
.woltlab-color-D3D3D3 { color: #D3D3D3 !important; }
.woltlab-color-DAA520 { color: #DAA520 !important; }
.woltlab-color-DDA0DD { color: #DDA0DD !important; }
/* ... */

